# Abstractorizer

./: .gitignore  .gitmodules  .qmake.stash  CMakeLists.txt  CMakeLists.txt.bak  Game engines with source.xlsx  LICENSE  README.md  abstractorizer overview.ai  imgui-qt3d.sln
cmake/: PrintIncludes.cmake
conan/urho3d/: conanfile.py
lib/: git_submodule_cmd.txt
notes/: Audio options.xlsx  Interesting engines and libraries.xlsx  notes.txt
src/: CMakeLists.txt  cmakeversion.h.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  platforms.h  src.sln
src/backends/bgfx/: main.cpp  mingine.vcxproj
src/backends/generic/: CMakeLists.txt  engine_features.h  engine_spawner.h  engine_widget.h  engine_widget_internal.cpp  engine_widget_internal.h  imgui_manager.h
src/backends/magnum/: CMakeLists.txt  magnum_widget.cpp  magnum_widget.h  magnum_widget_internal.cpp  magnum_widget_internal.h
src/backends/ogre/: CMakeLists.txt  ogre_widget.cpp  ogre_widget.h  ogre_widget_internal.h
src/backends/ogre-next/: CMakeLists.txt  ogrenext_widget.cpp  ogrenext_widget.h  ogrenext_widget_internal.h
src/backends/qt3d/: CMakeLists.txt  gui.h  qt3d_imgui_manager.h  qt3d_widget.cpp  qt3d_widget.h  qt3d_widget_internal.cpp  qt3d_widget_internal.h  qt3d_window.cpp  qt3d_window.h
src/backends/sdl/: CMakeLists.txt  notes.txt  sdl_utils.cpp  sdl_utils.h  sdl_widget.cpp  sdl_widget.h  sdl_widget_internal.cpp  sdl_widget_internal.h
src/backends/tinyrenderer/: CMakeLists.txt  argb.h  tinyrenderer_widget.cpp  tinyrenderer_widget.h  tinyrenderer_widget_internal.cpp  tinyrenderer_widget_internal.h
src/backends/tinyrenderer/lib/: geometry.cpp  geometry.h  main.h  model.cpp  model.h  our_gl.cpp  our_gl.h  tgaimage.cpp  tgaimage.h
src/backends/wicked/: CMakeLists.txt  RCa20236  Tests.cpp  Tests.h  wicked_widget.cpp  wicked_widget.h  wicked_widget_internal.cpp  wicked_widget_internal.h
src/backends/zauonlok/: CMakeLists.txt  zauonlokrenderer_widget.cpp  zauonlokrenderer_widget.h  zauonlokrenderer_widget_internal.cpp  zauonlokrenderer_widget_internal.h
src/backends/zauonlok/lib/: CMakeLists.txt
src/backends/zauonlok/lib/renderer/: main.c
src/backends/zauonlok/lib/renderer/core/: image.c  mesh.c
src/backends/zauonlok/lib/renderer/scenes/: scene_helper.c
src/backends/zauonlok/lib/renderer/tests/: test_blinn.c
src/bgfx/: bgfx_interface.cpp  main.h  precomp.h
src/generic/: CMakeLists.txt  engine_spawner.h  engine_widget.h  engine_widget_internal.h  engine_window.h  imgui_manager.h
src/guis/: notes.txt
src/guis/copperspice/: CMakeLists.txt
src/guis/lvgl/: CMakeLists.txt  CMakeListsb.txt  main.c  simulator.c  simulator.h  simulatorold.c
src/guis/lvgl/qt/: CMakeLists.txt  notes.txt
src/guis/lvgl/qt/lvgl_qt/: CMakeLists.txt  LvglCppInterface.cpp  LvglCppInterface.h  LvglRenderer.cpp  LvglRenderer.hpp
src/guis/lvgl/qt/lvgl_qt/test/: CMakeLists.txt  cinclude.c  test.c
src/guis/lvgl/qt/lvgl_qt_widgets/: CMakeLists.txt  LvglGraphicsView.hpp  main.cpp
src/guis/lvgl/sdl/example/: CMakeLists.txt  Makefile.nxdk  example.c  input_test.c  input_test.h
src/guis/lvgl/sdl/lv_drv/: lv_sdl_drv_display.c  lv_sdl_drv_input.c
src/imgui-qt3d/: CMakeLists.txt.bak  imgui-qt3d.vcxproj  imgui-qt3d.vcxproj.filters  imguimanager.cpp  imguimanager.h
src/imgui-qt3d-test/: CMakeLists.txt.bak  imgui-qt3d-test.vcxproj  imgui-qt3d-test.vcxproj.filters  imgui.ini  imguiqt3dwindow.cpp  imguiqt3dwindow.h  main.cpp  mainwindow.cpp  mainwindow.ui  ui_mainwindow.h
src/magnum/: CMakeLists.txt  magnum_widget.cpp  magnum_widget.h  magnum_widget_internal.cpp  magnum_widget_internal.h  magnum_widget_internal_ogl.cpp  magnum_widget_internal_ogl.h  magnum_widget_internal_sdl.cpp  magnum_widget_internal_sdl.h
src/qt3d/: CMakeLists.txt  gui.cpp  gui.h  imgui-qt3d-test.pro  imgui-qt3d-test.vcxproj  imgui-qt3d-test.vcxproj.filters  imgui.ini  imgui_manager.h  imgui_window.h  qt3d_imgui_manager.cpp  qt3d_imgui_manager.h  qt3d_imgui_window.cpp  qt3d_imgui_window.h  qt3d_widget.cpp  qt3d_widget.h  qt3d_window.cpp  qt3d_window.h
src/sdl/: CMakeLists.txt  notes.txt  sdl_widget.cpp  sdl_widget.h  sdl_widget_internal.cpp  sdl_widget_internal.h  sdlwidget.h
src/urho3d/: CMakeLists.txt  urho3d_widget.cpp  urho3d_widget.h  urho3d_widget_internal.cpp  urho3d_widget_internal.h  urho3d_window.cpp  urho3d_window.h
src/wicked/: CMakeLists.txt  magnum_widget.cpp  magnum_widget.h  magnum_widget_internal.h  wicked_widget.h  wicked_widget_internal.cpp  wicked_widget_internal.h
src/wicked/Tests/: CMakeLists.txt  wicked_widget.cpp  wicked_widget.h  wicked_widget_internal.cpp  wicked_widget_internal.h  wicked_window.cpp  wicked_window.h
